create all adapters and activities
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/app/src/main/res/layout/activity_todos.xml
+++ b/app/src/main/res/layout/activity_todos.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.PostsActivity">
-
+    tools:context="com.codingblocks.restapiretrofitjson.activities.TodosActivity">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvPostsList"
+        android:id="@+id/rvTodosList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-
 </FrameLayout>
