--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.codingblocks.restapiretrofitjson.MainActivity">
-    <Button
-        android:id="@+id/btnAllPosts"
-        android:layout_gravity="bottom"
-        android:text="Show All Posts"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginBottom="40dp"
-        android:id="@+id/rvUserList"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:orientation="vertical"
         android:layout_height="match_parent">
+        <Button
+            android:id="@+id/btnUsers"
+            android:text="Users"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+        <Button
+            android:id="@+id/btnPosts"
+            android:text="Posts"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
 
-    </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/btnAlbums"
+            android:text="Albums"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+        <Button
+            android:id="@+id/btnTodos"
+            android:text="Todos"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+    </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
