--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.codingblocks.restapiretrofitjson.activities.CommentsActivity">
-    
+
+    <ProgressBar
+        android:id="@+id/pbProgress"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvCommentsList"
         android:layout_width="match_parent"
