--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.codingblocks.restapiretrofitjson.activities.PostsActivity">
 
+    <ProgressBar
+        android:id="@+id/pbProgress"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPostsList"
         android:layout_width="match_parent"
