--- a/app/src/main/res/layout/activity_photos_list.xml
+++ b/app/src/main/res/layout/activity_photos_list.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.PostsActivity">
+    android:layout_height="wrap_content"
+    tools:context="com.codingblocks.restapiretrofitjson.activities.PhotosListActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvPostsList"
         android:layout_width="match_parent"
+        android:id="@+id/rvPhotosList"
         android:layout_height="wrap_content">
-
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+
+</LinearLayout>
