Albums functionality added

--- a/app/src/main/res/layout/activity_albums.xml
+++ b/app/src/main/res/layout/activity_albums.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aarushi.restapiretrofitjson.TodosActivity">
+    tools:context="com.aarushi.restapiretrofitjson.AlbumsActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTodosList"
+        android:id="@+id/rvAlbumsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
