--- a/app/src/main/res/layout/activity_album_thumbnail.xml
+++ b/app/src/main/res/layout/activity_album_thumbnail.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aarushi.restapiretrofitjson.TodosActivity">
+    tools:context="com.aarushi.restapiretrofitjson.AlbumThumbnail">
+
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTodosList"
+        android:id="@+id/rvThumbnailList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
