--- a/app/src/main/res/layout/list_item_album.xml
+++ b/app/src/main/res/layout/list_item_album.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_height="wrap_content"
+
+
+<android.support.v7.widget.CardView
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     app:cardElevation="5dp"
     app:cardCornerRadius="3dp"
     android:layout_margin="5dp">
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,24 +16,14 @@
 
         <TextView
             android:text="TITLE"
-            android:textSize="25sp"
-            android:id="@+id/tvPostTitle"
+            android:textSize="25dp"
+            android:id="@+id/tvAlbumTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <TextView
-            android:text="BODY"
-            android:textSize="20sp"
-            android:id="@+id/tvPostBody"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/btnPostComments"
-            android:text="COMMENTS"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
     </LinearLayout>
 
 
+
 </android.support.v7.widget.CardView>
+
+
