--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <TextView
-        android:text="Some body text goes here \nabout comment"
-        android:textSize="18sp"
-        android:id="@+id/tvCommentBody"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<android.support.v7.widget.CardView
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="3dp"
+    android:layout_margin="5dp">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
+
         <TextView
-            android:textSize="15sp"
-            android:text="Users Name"
-            android:id="@+id/tvCommentName"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:id="@+id/tvCommentBody"
+            android:text="BODY"
+            android:textSize="22sp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="15sp"
-            android:text="email@domain.com"
-            android:id="@+id/tvCommentEmail"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="1"
+                android:text="EMAIL"
+                android:textSize="15sp"
+                android:id="@+id/tvCommentEmail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_weight="1"
+                android:id="@+id/tvCommentName"
+                android:layout_width="0dp"
+                android:text="NAME"
+                android:textSize="15sp"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+
+
+</android.support.v7.widget.CardView>
+
+
+
+
