--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,64 +10,70 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:orientation="vertical"
+
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
         android:padding="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
 
 
         <TextView
-            android:text="Username"
+            android:text="UserUserName"
             android:textSize="20sp"
-            android:id="@+id/tvUserUsername"
+            android:id="@+id/tvUserUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
         <TextView
-            android:textSize="15sp"
-            android:text="Firstname Lastname"
+            android:text="UserName"
             android:id="@+id/tvUserName"
+            android:textSize="15sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
-                android:textSize="15sp"
-                android:text="+91xxxxxxx"
+                android:text="+91 xxxxxxxxx"
                 android:id="@+id/tvUserPhone"
-                android:layout_weight="1"
                 android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content" />
+
             <TextView
-                android:textSize="15sp"
                 android:text="email@domain.com"
                 android:id="@+id/tvUserEmail"
-                android:layout_weight="1"
                 android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
-                android:id="@+id/btnUserComments"
-                android:text="SHOW TODOS"
-                android:layout_weight="1"
-                android:layout_width="0dp"
+                android:text="POSTS"
+                android:id="@+id/btnUserPosts"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <Button
-                android:id="@+id/btnUserPosts"
-                android:text="SHOW POSTS"
-                android:layout_weight="1"
-                android:layout_width="0dp"
+                android:text="TODOS"
+                android:id="@+id/btnUserComments"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
 
     </LinearLayout>
 
+
+
 </android.support.v7.widget.CardView>
+
