--- a/app/src/main/res/layout/activity_pics.xml
+++ b/app/src/main/res/layout/activity_pics.xml
@@ -4,11 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.CommentsActivity">
+    tools:context="com.codingblocks.restapiretrofitjson.activities.PicsActivity">
+
+    <ProgressBar
+        android:id="@+id/pbProgress"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvCommentsList"
+        android:id="@+id/rvPhotosView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
 </FrameLayout>
