--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -19,6 +19,7 @@
         <TextView
             android:text="Username"
             android:textSize="20sp"
+            android:textColor="@android:color/holo_red_dark"
             android:id="@+id/tvUserUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -54,15 +55,17 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnUserComments"
-                android:text="SHOW TODOS"
+                android:text="Show Todos"
                 android:layout_weight="1"
+                android:textColor="@android:color/holo_blue_dark"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <Button
                 android:id="@+id/btnUserPosts"
-                android:text="SHOW POSTS"
+                android:text="Show Posts"
                 android:layout_weight="1"
                 android:layout_width="0dp"
+                android:textColor="@android:color/holo_blue_dark"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
