--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.CommentsActivity">
-    
+    tools:context=".activities.PhotosActivity">
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvCommentsList"
+        android:id="@+id/rvPhotosList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorComment">
+        android:background="@color/colorAlbum">
 
     </android.support.v7.widget.RecyclerView>
 
