--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -2,11 +2,13 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootView"
     app:cardElevation="5dp"
     app:cardCornerRadius="3dp"
     android:layout_margin="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/background_light">
 
     <LinearLayout
         android:orientation="vertical"
@@ -49,21 +51,33 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnUserPosts"
+            android:text="Show Posts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/background_light" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:id="@+id/btnUserComments"
+                android:id="@+id/btnUserTodos"
                 android:text="SHOW TODOS"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/cardview_light_background"
+                android:textColor="@color/cardview_dark_background" />
             <Button
-                android:id="@+id/btnUserPosts"
-                android:text="SHOW POSTS"
+                android:id="@+id/btnUserAlbum"
+                android:text="SHOW Albums"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/cardview_light_background"
+                android:textColor="@color/cardview_dark_background" />
         </LinearLayout>
 
     </LinearLayout>
