--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.CommentsActivity">
-    
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvCommentsList"
+    tools:context="com.codingblocks.restapiretrofitjson.activities.ImageActivity">
+
+    <ImageView
+    android:id="@+id/ivPhoto"
+    android:layout_width="match_parent"
+    android:layout_height="400dp" />
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:text="Title"
+        android:textSize="40sp"
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <ProgressBar
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
