--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -6,18 +6,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.CommentsActivity">
-    
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvCommentsList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    tools:context="com.codingblocks.restapiretrofitjson.activities.PhotoActivity">
 
-    </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rvPhotoListView" />
 
     <ProgressBar
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
 </LinearLayout>
