--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.codingblocks.restapiretrofitjson.MainActivity">
 
     <LinearLayout
@@ -11,37 +12,33 @@
         android:layout_width="0dp"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <Button
-            android:id="@+id/btnUsers"
-            android:text="Users"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
-        <Button
-            android:id="@+id/btnPosts"
-            android:text="Posts"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
-
+        <ImageView
+            android:id="@+id/ivUsers"
+            android:layout_width="wrap_content"
+            android:background="@android:color/transparent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/ivPosts"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
     </LinearLayout>
     <LinearLayout
         android:layout_weight="1"
         android:layout_width="0dp"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <Button
-            android:id="@+id/btnAlbums"
-            android:text="Albums"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
-        <Button
-            android:id="@+id/btnTodos"
-            android:text="Todos"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp" />
+        <ImageView
+            android:id="@+id/ivAlbums"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/ivTodos"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
-</LinearLayout>
+   </LinearLayout>
