--- a/app/src/main/res/layout/activity_todos.xml
+++ b/app/src/main/res/layout/activity_todos.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.codingblocks.restapiretrofitjson.activities.TodosActivity">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvTodosList"
@@ -11,4 +13,9 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
-</FrameLayout>
+
+    <ProgressBar
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
