--- a/app/src/main/res/layout/list_item_photo.xml
+++ b/app/src/main/res/layout/list_item_photo.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5dp"
     app:cardCornerRadius="5dp"
-    android:layout_margin="5dp"
-    >
+    android:layout_margin="5dp">
 
     <LinearLayout
+
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,19 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/ivPhoto"
+                android:layout_width="100dp"
+                android:layout_height="100dp" />
+
             <TextView
-                android:text="Sample Todo Text"
-                android:id="@+id/tvTodoTitle"
-                android:layout_weight="1"
-                android:layout_width="0dp"
+                android:id="@+id/tvTitle"
+                android:text="Title"
+                android:textSize="30dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-
-            <CheckBox
-                android:id="@+id/cbTodo"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
 
 
         </LinearLayout>
