--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -48,24 +48,24 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
-                android:id="@+id/btnUserComments"
-                android:text="SHOW TODOS"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:id="@+id/tvUserShowPost"
+                android:text="show post"
+                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
             <Button
-                android:id="@+id/btnUserPosts"
-                android:text="SHOW POSTS"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+                android:id="@+id/tvUserShowTodos"
+                android:textSize="10sp"
+                android:text="show Todos"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
 
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
