--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.developer.harshi.apihomework.MainActivity">
+    tools:context="com.developer.harshi.apihomework.AlbumsActivity">
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvPostsList"
+        android:id="@+id/rvAlbumsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
-
-</FrameLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
