--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -4,13 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.UsersActivity">
-    <Button
-        android:id="@+id/btnAllPosts"
-        android:layout_gravity="bottom"
-        android:text="Show All Posts"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    tools:context="com.developer.harshi.apihomework.UsersActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginBottom="40dp"
