--- a/app/src/main/res/layout/list_item_album.xml
+++ b/app/src/main/res/layout/list_item_album.xml
@@ -13,19 +13,11 @@
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content" />
-
         <TextView
-            android:id="@+id/tvshowTodoTitle"
+            android:id="@+id/tvShowTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40sp"
-            android:layout_weight="0.70"
-            android:text="tvshowTodoTitle" />
+            android:text="Title"
+            android:textSize="30sp"/>
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
