adding albums, photos and todos checkbox

--- a/app/src/main/res/layout/list_item_photo.xml
+++ b/app/src/main/res/layout/list_item_photo.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <CheckBox
+    android:layout_height="match_parent">
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/todocheck"/>
+        android:id="@+id/photothumbnail"
+        android:padding="10dp"/>
     <TextView
-        android:text="Sample Todo Text"
-        android:id="@+id/tvTodoTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/phototitle"
+        android:padding="10dp"/>
 
 </LinearLayout>
